--- a/index.html
+++ b/index.html
@@ -31,25 +31,25 @@
             <div class="boxcolor">
                 <p>Box Colour :</p>
                     <select id="seckutu" name="seckutu">
-                        <option value="secenek1">Kırmızı</option>
-                        <option value="secenek2">Mavi</option>
-                        <option value="secenek3">Yeşil</option>
-                        <option value="secenek3">Sarı</option>
-                        <option value="secenek3">Mor</option>
-                        <option value="secenek3">Turuncu</option>
-                        <option value="secenek3">Pembe</option>
-                        <option value="secenek3">Siyah</option>
+                        <option value="1">Kırmızı</option>
+                        <option value="2">Mavi</option>
+                        <option value="3">Yeşil</option>
+                        <option value="4">Sarı</option>
+                        <option value="5">Mor</option>
+                        <option value="6">Turuncu</option>
+                        <option value="7">Pembe</option>
+                        <option value="8">Siyah</option>
 
                     </select>
             </div>
             <div>
                 <p>Box Border Type :</p>
                     <select id="seckutu" name="seckutu">
-                        <option value="secenek1">Dashed</option>
-                        <option value="secenek2">Dotted</option>
-                        <option value="secenek3">Double</option>
-                        <option value="secenek3">Solid</option>
-                        <option value="secenek3">Groove</option>
+                        <option value="1">Dashed</option>
+                        <option value="2">Dotted</option>
+                        <option value="3">Double</option>
+                        <option value="4">Solid</option>
+                        <option value="5">Groove</option>
 
                     </select>
             </div>
@@ -70,8 +70,8 @@
                 <p>Box Rotate :</p>
                 <input type="text" inputmode="numeric" name="width" id="width">
             </div>
-            <div>
-                
+            <div style="margin-top: 20px;">
+                <button type="button" id="apply-button">Apply the properties</button>
             </div>
         </section>
         <section class="generated-div-user">
